--- a/css/style.css
+++ b/css/style.css
@@ -780,3 +780,23 @@ body section div div a .downloadCv{
     opacity: 1;
   }
 }
+
+.language-switcher{
+  padding-left: 10px;
+}
+
+.language-switcher button {
+  margin-right: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.language-switcher button:hover {
+  background-color: #0056b3;
+}
+
+.language-switcher button.active {
+  background-color: #007BFF;
+  color: white;
+}
