--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,9 @@ a {
   text-decoration: none;
   color: inherit; }
 
-li {
-  list-style: none; }
+/* li {
+  list-style: none; 
+} */
 
 input:focus,
 button:focus,
@@ -545,7 +546,9 @@ textarea {
     font-weight: 700;
     letter-spacing: 1px; }
   .header__links {
-    display: flex; }
+    display: flex;
+    list-style: none;
+  }
     @media only screen and (max-width: 37.5em) {
       .header__links {
         display: none; } }
